*0.11.0* *SVN*

* Add bazaar (v1) SCM module [Edd Dumbill] (#3533)

* Fix stftime format string used in CVS module to be Windows-compatible (fixes #3383)

* Add an better error when a task is run and no servers match the required conditions

* Add default spinner and cold_deploy tasks, and spinner_user variable

* Changed restart_via variable to (boolean) use_sudo

* Only chmod when the revisions.log file is first created

* Make UPPERCASE variables work

* Added rails_env variable (defaults to production) for use by tasks that employ the RAILS_ENV environment variable

* Added Actor.default_io_proc

* Set :actor key on SSH channel instances


*0.10.0* (January 2nd, 2006)

* Handle ssh password prompts like "someone's password:"

* Make CLI#echo available as a class method.

* Add CLI#with_echo.

* Make the default password prompt available as a class method.

# Add documentation for the CLI class.

* Add a sanity check to make sure the correct versions of Net::SSH and Net::SFTP are installed.

* Added a cleanup task to remove unused releases from the deployment directory

* Allow password to be reentered on sudo if it was entered incorrectly

* Use && as the command separator for the checkouts, so that errors are caught early.

* Ping each SSH connection every 1s during command processing so that long-running commands don't cause the connection to timeout.

* Add a 0.01s sleep during the command loop so that the CPU doesn't go ballistic while ST is doing its thing.

* Add :restart_via variable for specifying whether restart ought to use :sudo (default, use sudo)

* Use SFTP for file transfers (if available).

* Add an "update_current" task that will do an svn up on the current release

* Use the :checkout variable to determine what operation to use for svn checkouts (instead of co, like "export").

* The Rails rake tasks now load ST directly, instead of invoking it via system
